Updated BlockHandler, NPCHandler
BlockHandler can now take coordinates variables. NPCHandler (The citizens plugin) is now optional. Some small optimizations were added.